# Computer_club

./: CMakeLists.txt  README.md  gcc_mingw_compile_instructon.txt  myTest.txt  myTest2.txt  myTest3.txt  myTest4.txt
src/: ComputerClub.cpp  ComputerClub.h  ComputerClubConfig.h  ComputerClubEvent.h  Main.cpp  Utilities.h  WorkTime.h
